# Simulations

./: .gitignore  CMakeLists.txt  README.md
analysis/ipynb/: Untitled.ipynb  test_intro.ipynb
analysis/ipynb/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test_intro-checkpoint.ipynb
analysis/python/: convert2numpy.py  plot_scatter3D.py
common/: CMakeLists.txt
common/include/: MaterialsManager.h
common/src/: MaterialsManager.cc
config/: LinkDef.h  config.h.in  env.sh
drivers/src/: analyze_hgcal.cc  simulate_hgcal.cc
hgc/: CMakeLists.txt
hgc/config/: config__SiW.geom  geometryConfig.geom
hgc/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh  defs.h
hgc/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
scripts/: generate_submitToCERN.py  submit_local.sh
